fix titles word spacing

--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -93,8 +93,6 @@ facoltativo:
 -migliorare css hover
 
 CONSULTING:
-importante:
-- OK FATTO sistemare bottoni
 facoltativo:
 -schiarire la freccia del select
 -sistemare il dropdown del select
